--- a/summer_project/package.json
+++ b/summer_project/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "next": "11.0.0",
+    "node-sass": "^6.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@zeit/next-css": "^1.0.1",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
     "typescript": "4.3.4"
