--- a/app/package.json
+++ b/app/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --project server/tsconfig.json server/index.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "next": "11.0.0",
@@ -18,9 +19,11 @@
     "react-firebaseui": "^5.0.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/react": "17.0.11",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
+    "ts-node": "^10.0.0",
     "typescript": "4.3.4"
   }
 }
