--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.0.2",
     "cuid": "^2.1.8",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "next": "11.0.0",
