--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,8 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-firebaseui": "^5.0.2",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
