--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "cuid": "^2.1.8",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
