--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-firebaseui": "^5.0.2",
