--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "next": "11.0.0",
+    "next-auth": "^3.27.3",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
