--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "^4.11.4",
+    "@material-ui/system": "^4.12.1",
+    "@mui/material": "^5.0.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.5",
