--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/styles": "^4.11.4",
     "@material-ui/system": "^4.12.1",
     "@mui/material": "^5.0.2",
+    "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.5",
@@ -33,7 +34,7 @@
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "get-google-fonts": "^1.2.2",
-    "next": "11.0.0",
+    "next": "^11.1.2",
     "next-auth": "^3.27.3",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
@@ -45,7 +46,7 @@
     "react-firebaseui": "^5.0.2",
     "reactstrap": "^8.9.0",
     "sass": "^1.35.1",
-    "swr": "^0.5.6"
+    "swr": "^0.5.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
