--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,9 +15,9 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@main
         - name: Install dependencies
-          run: npm i
+          run: npm ci
         - name: Build dependencies
-          run: npm run dev
+          run: npm run build
         - name: Archive production artifact
           uses: actions/upload-artifact@main
           with:
