feat: added new .eslint config and fixed admin findById method
- added new .eslintrc.js config for root route
- added new .eslintrc.js config for server route and put flag "error" for @typescript-eslint/explicit-function-return-type rule (!important)
- added prettier
- fixed @types packages for csurf and cookie-parser
- fixed all files regards new rules of prettier and .eslint
- fixed admin.db.ts findById method

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
-    "noEmit": false
+    "noEmit": false,
+    "strict": false,
+    "esModuleInterop": true
   },
-  "include": ["server"]
+  "include": ["server"],
 }
