--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/system": "^4.12.1",
     "@mui/material": "^5.0.2",
     "@types/csurf": "^1.11.2",
+    "ansi-regex": "^6.0.1",
     "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
