--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -24,25 +24,10 @@ jobs:
     name: Docker build  
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v2
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v5
         with:
+          image: abdualiandrei/fullstack-renting-application
+          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: user/app:latest
