--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -2,7 +2,7 @@ name: Node CI
 
 on:
   push:
-    branches: [main]
+    branches: [**]
   pull_request:
     branches: [main]
 
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run : ./run_script.sh
       - run: npm ci
       - run: npm test
       - run: npm run build
