--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -14,9 +14,10 @@ jobs:
       matrix:
         os: [ubuntu-latest,macOS-latest]
     steps:
-      - name: install robotframework
-      - run: pip3 install robotframework
-      
+      - name: Install robotframework
+        run: pip3 install robotframework
+      - name: Run testcases 
+        run: sh ./run_script.sh
   
   test_pull_request:
     name: test_prs
@@ -31,11 +32,11 @@ jobs:
         with:
           node-version: 12
       - name: Install dependencies
-      - run: npm ci
+        run: npm ci
       - name: Test dependencies
-      - run: npm test
+        run: npm test
       - name: Build dependencies
-      - run: npm run build
+        run: npm run build
   # docker:
   #   name: Docker build  
   #   runs-on: ubuntu-latest
