--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint --fix . --ext .ts",
-    "test" : "mocha"
+    "test": "mocha"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -38,6 +38,7 @@
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "get-google-fonts": "^1.2.2",
+    "mocha": "^9.1.3",
     "next": "^11.1.2",
     "next-auth": "^3.27.3",
     "node-sass": "^6.0.1",
