--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install robotframework
         run: pip3 install robotframework
       - name: Run testcases 
-        run: sh ./run_script.sh
+        run: ./run_script.sh
         
   
   test_pull_request:
