--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -9,10 +9,7 @@ on:
 jobs:
   robot_tests:
     name: robot-tests
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macOS-latest]
+    runs-on: ubuntu-latest
     steps:
       - run: pip3 install robotframework
       - run: sh ./run_script.sh
