--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -9,10 +9,15 @@ on:
 jobs:
   robot_tests:
     name: robot-tests
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest]
     steps:
       - run: pip3 install robotframework
-      - run: sh ./run_script.sh
+      - run: |
+          chmod +x 
+          sh ./run_script.sh
 
   test_pull_request:
     name: test_pullrequests
