--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - run: pip3 install robotframework
       - run: |
-          chmod +x 
+          chmod +x run_script.sh
           sh ./run_script.sh
 
   test_pull_request:
