--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -15,9 +15,8 @@ jobs:
         os: [ubuntu-latest, macOS-latest]
     steps:
       - run: pip3 install robotframework
-      - run: |
-          chmod +x run_script.sh
-          sh ./run_script.sh
+      - run: ./run_script.sh
+          
 
   test_pull_request:
     name: test_pullrequests
