fixing process completed with exit code 127

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -15,7 +15,7 @@ jobs:
         os: [ubuntu-latest, macOS-latest]
     steps:
       - run: pip3 install robotframework
-      - run: ./run_script.sh
+      - run: sh ./run_script.sh
           
 
   test_pull_request:
