--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -40,11 +40,8 @@ jobs:
         with:
           push: true
           tags: abdualiandrei/fullstack-renting-application:latest
-      # - uses: actions/checkout@v2
-      # - name: Build Docker Image
-      #   run: docker build --file Dockerfile --tag robot-testing .
   robot-testing:
       runs-on: ubuntu-latest
       steps:
       - run: pip3 install robotframework
-      - run: sh ./run_script.sh
+      - run: sh ./scripts/run_script.sh
