--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -44,4 +44,4 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - run: pip3 install robotframework
-      - run: sh ./scripts/run_script.sh
+      - run: ./scripts/run_script.sh
