--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -41,8 +41,9 @@ jobs:
           push: true
           tags: abdualiandrei/fullstack-renting-application:latest
   robot-testing:
+      needs: [test_pull_request, docker]
       runs-on: ubuntu-latest
       steps:
       - run: pip3 install robotframework
-      - run: sh .github/scripts/run_script.sh
+      - run: .github/scripts/run_script.sh
         shell: bash
