--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -45,5 +45,6 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - run: pip3 install robotframework
-      - run: .github/scripts/run_script.sh
+      - run: ls -l
+      - run: sh .github/scripts/run_script.sh
         shell: bash
