--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -40,11 +40,11 @@ jobs:
         with:
           push: true
           tags: abdualiandrei/fullstack-renting-application:latest
-  robot-testing:
-      needs: [test_pull_request, docker]
-      runs-on: ubuntu-latest
-      steps:
-      - run: pip3 install robotframework
-      - run: ls -l
-      - run: sh .github/scripts/run_script.sh
-        shell: bash
+  # robot-testing:
+  #     needs: [test_pull_request, docker]
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - run: pip3 install robotframework
+  #     - run: ls -l
+  #     - run: sh .github/scripts/run_script.sh
+  #       shell: bash
