--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+test_logs
 
 # Dependency directories
 node_modules/
@@ -97,3 +97,5 @@ Thumbs.db
 #kubectl
 kubectl
 *.sha256
+
+
