--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -25,6 +25,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
+      - run: npm install --silent
       - run: npm test
       - run: npm run build
   docker:
