--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -6,13 +6,13 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  # robot-testing:
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #     - run: pip3 install robotframework
-  #     - run: ls -l
-  #     - run: sh .github/scripts/run_script.sh
-  #       shell: bash
+  robot-testing:
+      runs-on: ubuntu-latest
+      steps:
+      - run: pip3 install robotframework
+      - run: chmod u+x .github/scripts/run_script.sh 
+      - run: sh .github/scripts/run_script.sh
+        shell: bash
   test_pull_request:
     name: test_pullrequests
     runs-on: ${{matrix.os}}
