--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -10,8 +10,8 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - run: pip3 install robotframework
-      - run: chmod u+x .github/scripts/run_script.sh 
-      - run: sh .github/scripts/run_script.sh
+      - run: chmod u+x run_script.sh 
+      - run: sh ./run_script.sh
         shell: bash
   test_pull_request:
     name: test_pullrequests
