--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -1,5 +1,4 @@
 name: Node CI
-
 on:
   push:
     branches: [main, cicd-actions]
@@ -7,10 +6,11 @@ on:
     branches: [main]
 jobs:
   robot-testing:
-      runs-on: ubuntu-latest
-      steps:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - run: pip3 install robotframework
-      - run: chmod u+x run_script.sh 
+      - run: chmod u+x run_script.sh
       - run: sh ./run_script.sh
         shell: bash
   test_pull_request:
@@ -26,7 +26,7 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm install --silent
-      - run: npm install --global mocha 
+      - run: npm install --global mocha
       # - run: npm test -> to be added
       - run: npm run build
   docker:
@@ -35,9 +35,9 @@ jobs:
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      
+
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
