--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
+    "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
