--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -1,13 +1,20 @@
 name: Node CI
-
 on:
   push:
-    branches: [main]
+    branches: [main, cicd-actions]
   pull_request:
     branches: [main]
-
 jobs:
+  robot-testing:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: pip3 install robotframework
+      - run: chmod u+x run_tests.sh
+      - run: sh ./run_tests.sh
+        shell: bash
   test_pull_request:
+    name: test_pullrequests
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
@@ -18,18 +25,19 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm test
+      - run: npm install --silent
+      - run: npm install --global mocha
+      # - run: npm test -> to be added
       - run: npm run build
   docker:
     name: Docker build image
     runs-on: ubuntu-latest
     steps:
-    
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      
+
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -40,11 +48,3 @@ jobs:
         with:
           push: true
           tags: abdualiandrei/fullstack-renting-application:latest
-  # robot-testing:
-  #     needs: [test_pull_request, docker]
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #     - run: pip3 install robotframework
-  #     - run: ls -l
-  #     - run: sh .github/scripts/run_script.sh
-  #       shell: bash
