adding workflow for the test script

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -1,7 +1,7 @@
 name: Node CI
 on:
   push:
-    branches: [main, cicd-actions]
+    branches: [main,robot-testing]
   pull_request:
     branches: [main]
 jobs:
