--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "get-google-fonts": "^1.2.2",
     "next": "^11.1.2",
     "next-auth": "^3.27.3",
-    "node-sass": "^6.0.1",
+    "node-sass": "^4.14.0",
     "nodemon": "^2.0.12",
+    "npm-watch": "^0.11.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
@@ -50,7 +51,8 @@
     "react-firebaseui": "^5.0.2",
     "reactstrap": "^8.9.0",
     "sass": "^1.35.1",
-    "swr": "^0.5.7"
+    "swr": "^0.5.7",
+    "watch": "^0.13.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
