--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,18 +23,18 @@ jobs:
         with:
           name: build-artifact
           path: dist
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifact from build
-        uses: actions/checkout@main
-        with:
-          name: build-artifact
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN}}
+  # deploy:
+  #   name: Deploy
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Download artifact from build
+  #       uses: actions/checkout@main
+  #       with:
+  #         name: build-artifact
+  #     - name: Deploy to Firebase
+  #       uses: w9jds/firebase-action@master
+  #       with:
+  #         args: deploy --only hosting
+  #       env:
+  #         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN}}
