--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -15,12 +15,10 @@ jobs:
       - run: chmod u+x run_tests.sh
       - run: sudo npm install ttab -g
       - run: sudo npm install --silent
-      # - run : sudo apt-get install gnome-terminal
-      - run: ttab npm run dev && sh ./run_tests.sh
+      - run : nohup npm run dev && sh ./run_tests.sh
         shell: bash
   test_pull_request:
     name: test_pullrequests
-    needs: robot-testing
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
@@ -32,25 +30,22 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm install --silent
-      - run: npm install --global mocha
       - run: npm run build
   docker:
     name: Docker build image
-    needs: test_pull_request
     runs-on: ubuntu-latest
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          image: robot-testing-viarent:latest
           push: true
           tags: abdualiandrei/fullstack-renting-application:latest
