running app in the background and testing it

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -14,7 +14,7 @@ jobs:
       - run: pip3 install --upgrade robotframework-seleniumlibrary
       - run: chmod u+x run_tests.sh
       - run: sudo npm install --silent
-      - run : nohup npm run dev 
+      - run : nohup npm run dev &
       - run : sh ./run_tests.sh
         shell: bash
   test_pull_request:
