--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -9,13 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: apt-get install chromium-chromedriver
+      - run: sudo apt install chromium-chromedriver
       - run: pip3 install robotframework
       - run: pip3 install --upgrade robotframework-seleniumlibrary
       - run: chmod u+x run_tests.sh
       - run: sudo npm install --silent
       - run: nohup npm run dev &
-      - run: sh ./run_tests.sh
+      - run: sudo ./run_tests.sh
         shell: bash
   test_pull_request:
     name: test_pullrequests
