change sudo for other commands

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: sudo apt install chromium-chromedriver
-      - run: pip3 install robotframework
-      - run: pip3 install --upgrade robotframework-seleniumlibrary
-      - run: chmod u+x run_tests.sh
+      - run: sudo pip3 install robotframework
+      - run: sudo pip3 install --upgrade robotframework-seleniumlibrary
+      - run: sudo chmod u+x run_tests.sh
       - run: sudo npm install --silent
       - run: nohup npm run dev &
       - run: sudo ./run_tests.sh
