--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -5,21 +5,21 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  robot-testing:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt install chromium-chromedriver
-      - run: sudo pip3 install robotframework
-      - run: sudo npm install -g webdriver-manager
-      - run: sudo webdriver-manager update
-      - run: sudo nohup webdriver-manager start &
-      - run: sudo pip3 install --upgrade robotframework-seleniumlibrary
-      - run: sudo chmod u+x run_tests.sh
-      - run: sudo npm install --silent
-      - run: sudo nohup npm run dev &
-      - run: sudo ./run_tests.sh
-        shell: bash
+  # robot-testing:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: sudo apt install chromium-chromedriver
+  #     - run: sudo pip3 install robotframework
+  #     - run: sudo npm install -g webdriver-manager
+  #     - run: sudo webdriver-manager update
+  #     - run: sudo nohup webdriver-manager start &
+  #     - run: sudo pip3 install --upgrade robotframework-seleniumlibrary
+  #     - run: sudo chmod u+x run_tests.sh
+  #     - run: sudo npm install --silent
+  #     - run: sudo nohup npm run dev &
+  #     - run: sudo ./run_tests.sh
+  #       shell: bash
   test_pull_request:
     name: test_pullrequests
     runs-on: ${{matrix.os}}
