--- a/package.json
+++ b/package.json
@@ -49,13 +49,19 @@
     "swr": "^0.5.7"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
     "@types/react": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.33.0",
     "@zeit/next-css": "^1.0.1",
-    "eslint": "7.29.0",
+    "eslint": "^7.29.0",
     "eslint-config-next": "11.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.7",
+    "prettier": "2.4.1",
     "ts-node": "^10.0.0",
-    "typescript": "4.3.4"
+    "typescript": "^4.4.3"
   }
 }
