--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
-    "noEmit": false
+    "noEmit": false,
+    "esModuleInterop": true
   },
   "include": ["server"]
 }
