--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,8 +30,8 @@ jobs:
       steps:
         - name: Checkout repository
           uses: actions/checkout@main
-        - name: Download artifact
-          uses: actions/download-artifact@main
+        # - name: Download artifact
+          # uses: actions/download-artifact@main
           with:
             name: dist
             path: dist
