--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@googlemaps/react-wrapper": "^1.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
     "@material-ui/system": "^4.12.1",
     "@mui/material": "^5.0.2",
+    "@react-google-maps/api": "^2.7.0",
     "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
