fix: test http-exception.exception.ts and fix bugs provided by implementation
- added test/dummy.controller.ts for testing purposes
- fixed http-exception.exception.ts es5 inheritance issue (instant error throw)
- fixed privateAccessMiddleware, check by auth login and private-routes.ts access (should be accessed from private-routes.ts)
- added dummy route to private-routes.ts
- fixed express-callback function, made a guard promise wrapper, and send exception result

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "outDir": "dist",
     "noEmit": false,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "target": "es2017"
   },
   "include": ["server"]
 }
