--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-firebaseui": "^5.0.2",
+    "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
     "sass": "^1.35.1",
+    "slick-carousel": "^1.8.1",
     "swr": "^0.5.7"
   },
   "devDependencies": {
