fix: syntax + linting

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,6 +43,7 @@ jobs:
             path: dist
     docker:
       name: Docker build image
+      needs: build
       runs-on: ubuntu-latest
       steps:
         - name: Set up Docker Buildx
