--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cross-env": "^7.0.3",
     "csurf": "^1.11.0",
     "cuid": "^2.1.8",
+    "date-fns": "^2.27.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
     "firebase": "^8.6.8",
