--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,26 +1,25 @@
-# name: Deploy
-# on:
-#   push:
-#     branches: [ main ]
-# jobs:
-#   pull_request:
-#     branches: [ main ]
-#
-#     deploy:
-#       name: Deploy
-#       needs: build
-#       runs-on: ubuntu-latest
-#       steps:
-#         - name: Checkout repository
-#           uses: actions/checkout@main
-#         # - name: Download artifact
-#           # uses: actions/download-artifact@main
-#           with:
-#             name: dist
-#             path: dist
-#         - name: Deploy to Firebase
-#           uses: w9jds/firebase-action@master
-#           with:
-#             args: deploy --only hosting
-#           env:
-#             FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN}}
+name: Deploy
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+jobs:
+    deploy:
+      name: Deploy
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@main
+        # - name: Download artifact
+          # uses: actions/download-artifact@main
+          with:
+            name: dist
+            path: dist
+        - name: Deploy to Firebase
+          uses: w9jds/firebase-action@master
+          with:
+            args: deploy --only hosting
+          env:
+            FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN}}
