fix: syntax for workflows

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,26 +8,26 @@ on:
 jobs:
     deploy:
      if: ${{ github.event.workflow_run.conclusion == 'success' }}
-      name: Deploy
-      needs: build
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@main
-        - name: 'Upload artifact'
-          uses: actions/upload-artifact@main
-          with:
-            name: deploy-artifact
-            path: deploy_artifact.txt
-        - name: Deploy to Firebase
-          uses: w9jds/firebase-action@master
-          with:
-            args: deploy --only hosting
-          env:
-            FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN}}
-        - name: 'Download artifact'
-          uses: actions/download-artifact@main
-          with:
-            name: build-artifact
-        - shell: bash
-            run: cat build_artifact.txt
+     name: Deploy
+     needs: build
+     runs-on: ubuntu-latest
+     steps:
+       - name: Checkout repository
+         uses: actions/checkout@main
+       - name: 'Upload artifact'
+         uses: actions/upload-artifact@main
+         with:
+          name: deploy-artifact
+          path: deploy_artifact.txt
+       - name: Deploy to Firebase
+         uses: w9jds/firebase-action@master
+         with:
+           args: deploy --only hosting
+         env:
+           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN}}
+       - name: 'Download artifact'
+         uses: actions/download-artifact@main
+         with:
+           name: build-artifact
+       - shell: bash
+            cat build_artifact.txt
