--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "reactstrap": "^8.9.0",
     "sass": "^1.35.1",
     "slick-carousel": "^1.8.1",
-    "swr": "^0.5.7"
+    "swr": "^0.5.7",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^11.0.0",
@@ -72,6 +73,7 @@
     "nodemon": "^2.0.7",
     "prettier": "2.4.1",
     "ts-node": "^10.0.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "yaml-lint": "^1.2.4"
   }
 }
