--- a/.github/workflows/pr-build-docker.yaml
+++ b/.github/workflows/pr-build-docker.yaml
@@ -35,7 +35,7 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@main
         - name: Install dependencies
-          run: npm ci
+          run: npm ci && npm run install:all
         - name: linting
           run: npm run lint:fix && npm run lint:next
         - name: Build dependencies
