--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "get-google-fonts": "^1.2.2",
+    "multer": "^1.4.3",
     "next": "^11.1.2",
     "next-auth": "^3.27.3",
     "node-sass": "^6.0.1",
@@ -56,12 +57,14 @@
     "reactstrap": "^8.9.0",
     "sass": "^1.35.1",
     "slick-carousel": "^1.8.1",
-    "swr": "^0.5.7"
+    "swr": "^0.5.7",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^11.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
+    "@types/multer": "^1.4.7",
     "@types/react": "17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.33.0",
