fix: database generic function for selection data  with multi filtering feature -  add AllowedFilterOfferKeys which controls keys sent to firebase handle - add mnemonist library with built-in MultiMap - intersect 2 array helper function =====
feat(!generic.db.ts): findAllByKeys dramatic changes
- filter rules will select by in if query is nested
- two type of rules presented: one for range and another for equality/in check

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "dist",
     "noEmit": false,
     "esModuleInterop": true,
-    "target": "es2017"
+    "target": "es2017",
+    "downlevelIteration": true
   },
   "include": ["server"]
 }
