--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,7 @@
     ]
   },
   "functions": {
-    "source": "functions",
+    "source": "./server/functions",
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
