--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "firebase-admin": "^9.9.0",
     "get-google-fonts": "^1.2.2",
     "multer": "^1.4.3",
-    "next": "^11.1.2",
+    "next": "^11.1.3",
     "next-auth": "^3.27.3",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
@@ -51,8 +51,10 @@
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-firebase-hooks": "^3.0.4",
     "react-firebaseui": "^5.0.2",
+    "react-loading": "^2.0.3",
     "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
     "sass": "^1.35.1",
